web/static/static.css
.edit-book-article {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: flex-start;
    gap: 20px;
    padding: 20px;
}

.cover {
    max-width: 200px;
    flex-shrink: 0;
}

.cover img {
    width: 100%;
    height: auto;
}

/* books */
.book-card {
    display: flex;
    align-items: flex-start;
    gap: 1rem;
    border: var(--border-thickness) solid var(--text-color);
    padding: 1rem;
    margin-bottom: 1.5rem;
}

/* Container for the book cover image */
.book-cover {
    flex-shrink: 0;
    width: 10rem;
}

/* Style the actual image */
.book-cover img {
    display: block;
    width: 100%;
    height: auto;
}

.book-info {
    flex-grow: 1;
    margin-top: 0;
}

